--- a/src/app/Layouts/dashboard/dashboard.component.html
+++ b/src/app/Layouts/dashboard/dashboard.component.html
@@ -1,6 +1,7 @@
 <main class="flex justify-center items-center">
     <div class=" h-full w-full m-2 grid contenedor">
         <aside>
+            <app-aside-navbar/>
         </aside>
         <body>
         </body>
