--- a/src/app/Components/Sections/aside-navbar/aside-navbar.component.html
+++ b/src/app/Components/Sections/aside-navbar/aside-navbar.component.html
@@ -1,1 +1,19 @@
-<p>aside-navbar works!</p>
+<section class="w-full h-full grid" style="background-color: #09070e;">
+    <section class="logo flex justify-center items-center">
+        <div class="img"></div>
+    </section>
+    <section class="menu flex justify-center items-center flex-col gap-10">
+        <div class="cover">
+            <i class="bi bi-house-fill"></i>
+        </div>
+        <div class="cover">
+            <i class="bi bi-pie-chart-fill"></i>
+        </div>
+        <div class="cover">
+            <i class="bi bi-stack"></i>
+        </div>
+    </section>
+    <section class="profile flex justify-center items-center">
+        <i class="bi bi-person-fill"></i>
+    </section>    
+</section>
