--- a/src/app/Layouts/dashboard/dashboard.component.html
+++ b/src/app/Layouts/dashboard/dashboard.component.html
@@ -3,7 +3,8 @@
         <aside>
             <app-aside-navbar/>
         </aside>
-        <body>
-        </body>
+        <main class="router-outlet">
+            <router-outlet></router-outlet>
+        </main> 
     </div>
 </main>
