--- a/src/app/Components/Cards/card-sensor/card-sensor.component.html
+++ b/src/app/Components/Cards/card-sensor/card-sensor.component.html
@@ -1,10 +1,22 @@
-          <button class="bg-white p-3 w-full flex flex-col rounded-md dark:bg-gray-800 shadow-lg relative focus:outline-none">
-            <div class="flex xl:flex-row flex-col items-center font-medium text-gray-900 dark:text-white pb-2 mb-2 xl:border-b border-gray-200 border-opacity-75 dark:border-gray-700 w-full">
-              <img src="https://assets.codepen.io/344846/internal/avatars/users/default.png?fit=crop&format=auto&height=512&version=1582611188&width=512" class="w-7 h-7 mr-2 rounded-full" alt="profile" />
-              Mert Cukuren
+          <button class="p-3 w-full flex flex-col rounded-md shadow-lg relative focus:outline-none" style="background-color: #1f1d23;">
+            <div class="flex gap-5 xl:flex-row flex-col items-center font-medium text-gray-900 dark:text-white pb-2 mb-2 xl:border-b border-gray-200 border-opacity-75 dark:border-gray-700 w-full">
+                <i [class]="sensorIcon" style="font-size: 1.4em; color: #bebdbf;"></i>
+                <p>{{sensorName}}</p>
             </div>
-            <div class="flex items-center w-full">
-              <div class="text-xs py-1 px-2 leading-none dark:bg-gray-900 bg-green-100 text-green-600 rounded-md">Sales</div>
-              <div class="ml-auto text-xs text-gray-500">$2,794.00</div>
+            <div *ngIf="sensorValue < 50; else otherBlock" class="flex items-center w-full">
+                <div class="text-xs py-1 px-2 leading-none rounded-md" style="background-color: #cbf0ce; color: #6d706d;">
+                    <i class="bi bi-check" style="font-weight: 600; font-size: 0.9rem;"></i>
+                </div>
+                <div class="ml-auto text-xs text-gray-500">{{sensorValue}}</div>
             </div>
+
+            <ng-template #otherBlock>
+                <div class="flex items-center w-full">
+                    <div class="text-xs py-1 px-2 leading-none rounded-md" style="background-color: #5e282c; color: #da4b4e;">
+                        <i class="bi bi-exclamation-lg" style="font-weight: 600; font-size: 0.9rem;"></i>
+                    </div>
+                    <div class="ml-auto text-xs text-gray-500">{{sensorValue}}</div>
+                </div>
+            </ng-template>
+
           </button>
