--- a/src/app/Views/auth/login/login.component.html
+++ b/src/app/Views/auth/login/login.component.html
@@ -9,10 +9,16 @@
                 <div class="w-full flex-1 mt-8">
                     <div class="mx-auto max-w-xs">
                         <div class="textInputWrapper">
-                            <input placeholder="Email" type="text" class="textInput">
+                            <input 
+                            name="email"
+                            [(ngModel)]="email"
+                            placeholder="Email" type="text" class="textInput">
                         </div>
                         <div class="textInputWrapper">
-                            <input placeholder="Password" type="text" class="textInput">
+                            <input 
+                            name="password"
+                            [(ngModel)]="password"
+                            placeholder="Password" type="text" class="textInput">
                         </div>
                         <button
                             class="mt-5 tracking-wide font-semibold text-white-500 w-full py-4 rounded-lg hover:bg-green-700 transition-all duration-300 ease-in-out flex items-center justify-center focus:shadow-outline focus:outline-none" style="background-color: #a3e583;">
@@ -27,14 +33,10 @@
                             </span>
                         </button>
                         <p class="mt-6 text-xs text-gray-600 text-center">
-                            I agree to abide by Cartesian Kinetics
-                            <a href="#" class="border-b border-gray-500 border-dotted">
-                                Terms of Service
-                            </a>
-                            and its
-                            <a href="#" class="border-b border-gray-500 border-dotted">
-                                Privacy Policy
-                            </a>
+                            Don't have an account? 
+                            <a  
+                            (click)="register()"
+                            class="hover:underline cursor-pointer text-green-500">Sign up</a>
                         </p>
                     </div>
                 </div>
