cambios en placeholders del formulario de registro

--- a/src/app/Views/auth/register/register.component.html
+++ b/src/app/Views/auth/register/register.component.html
@@ -12,28 +12,28 @@
                 <div class="w-full flex-1 mt-8">
                     <div class="mx-auto max-w-xs">
                         <div class="textInputWrapper">
-                            <input 
+                            <input
                             [(ngModel)]="name"
                             name="name"
-                            placeholder="User name" type="text" class="textInput">
+                            placeholder="Your Name" type="text" class="textInput">
                         </div>
                         <div class="textInputWrapper">
-                            <input 
+                            <input
                             [(ngModel)]="email"
                             name="email"
-                            placeholder="email" type="text" class="textInput">
+                            placeholder="Your Email" type="text" class="textInput">
                         </div>
                         <div class="textInputWrapper">
-                            <input 
+                            <input
                             [(ngModel)]="password"
                             name="password"
-                            placeholder="password" type="text" class="textInput">
+                            placeholder="Your Password" type="text" class="textInput">
                         </div>
                         <div class="textInputWrapper">
-                            <input 
+                            <input
                             [(ngModel)]="confirmPassword"
                             name="confirmPassword"
-                            placeholder="repeat password" type="text" class="textInput">
+                            placeholder="Repeat your Password" type="text" class="textInput">
                         </div>
                         <button
                             class="mt-5 tracking-wide font-semibold text-white-500 w-full py-4 rounded-lg hover:bg-green-700 transition-all duration-300 ease-in-out flex items-center justify-center focus:shadow-outline focus:outline-none" style="background-color: #a3e583;">
@@ -49,7 +49,7 @@
                         </button>
                         <p class="mt-6 text-xs text-gray-600 text-center">
                             Already have an account?
-                            <a  
+                            <a
                             (click)="login()"
                             class="hover:underline cursor-pointer text-green-500">
                             Login</a>
