Vista para el control y monitoreo del carrito

--- a/src/app/Components/Sections/aside-navbar/aside-navbar.component.html
+++ b/src/app/Components/Sections/aside-navbar/aside-navbar.component.html
@@ -4,10 +4,10 @@
     </section>
     <section class="menu flex justify-center items-center flex-col gap-10">
         <div class="cover">
-            <i class="bi bi-house-fill"></i>
+            <i class="bi bi-house-fill" routerLink="/dashboard"></i>
         </div>
         <div class="cover">
-            <i class="bi bi-pie-chart-fill"></i>
+            <i class="bi bi-pie-chart-fill" routerLink="/dashboard/control"></i>
         </div>
         <div class="cover">
             <i class="bi bi-stack"></i>
@@ -15,5 +15,5 @@
     </section>
     <section class="profile flex justify-center items-center">
         <i class="bi bi-person-fill"></i>
-    </section>    
+    </section>
 </section>
