Cambios de diseño

--- a/src/app/Views/Control/control-view.component.html
+++ b/src/app/Views/Control/control-view.component.html
@@ -12,22 +12,26 @@
       <p class="text-center text-white">Mapa</p>
     </div>
   </div>
+
   <!-- Panel lateral -->
-  <div class="w-full md:w-64 bg-gray-900 text-white rounded-lg shadow-lg p-4 md:ml-4">
+  <div style="background-color: #09070e;" class="w-full md:w-64 text-white rounded-lg shadow-lg p-4 md:ml-4">
     <!-- Aquí irían los cuadros de monitoreo -->
-    <div class="mb-4">
+    <div class="mb-4 border border-white rounded p-2">
       <h2 class="font-bold mb-2">Temperatura</h2>
       <p>Valor de la temperatura</p>
     </div>
-    <div class="mb-4">
+    <br>
+    <div class="mb-4 border border-white rounded p-2">
       <h2 class="font-bold mb-2">Velocidad</h2>
       <p>Valor de la velocidad</p>
     </div>
-    <div class="mb-4">
+    <br>
+    <div class="mb-4 border border-white rounded p-2">
       <h2 class="font-bold mb-2">Ángulo de inclinación</h2>
       <p>Valor del ángulo de inclinación</p>
     </div>
-    <div>
+    <br>
+    <div class="border border-white rounded p-2">
       <h2 class="font-bold mb-2">Distancia del objeto más cercano</h2>
       <p>Valor de la distancia</p>
     </div>
