--- a/src/app/Components/Sections/aside-navbar/aside-navbar.component.html
+++ b/src/app/Components/Sections/aside-navbar/aside-navbar.component.html
@@ -14,6 +14,6 @@
         </div>
     </section>
     <section class="profile flex justify-center items-center">
-        <i class="bi bi-person-fill"></i>
+        <i class="bi bi-person-fill" routerLink="/dashboard/my/info"></i>
     </section>
 </section>
