--- a/src/app/Views/auth/login/login.component.html
+++ b/src/app/Views/auth/login/login.component.html
@@ -7,20 +7,21 @@
             </section>
             <div class="mt-5 flex flex-col items-center justify-center">
                 <div class="w-full flex-1 mt-8">
-                    <div class="mx-auto max-w-xs">
+                    <form class="mx-auto max-w-xs" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
                         <div class="textInputWrapper">
-                            <input 
+                            <input
                             name="email"
-                            [(ngModel)]="email"
+                            formControlName="email"
                             placeholder="Email" type="text" class="textInput">
                         </div>
                         <div class="textInputWrapper">
-                            <input 
+                            <input
                             name="password"
-                            [(ngModel)]="password"
-                            placeholder="Password" type="text" class="textInput">
+                            formControlName="password"
+                            placeholder="Password" type="password" class="textInput">
                         </div>
                         <button
+                            type="submit"
                             class="mt-5 tracking-wide font-semibold text-white-500 w-full py-4 rounded-lg hover:bg-green-700 transition-all duration-300 ease-in-out flex items-center justify-center focus:shadow-outline focus:outline-none" style="background-color: #a3e583;">
                             <svg class="w-6 h-6 -ml-2" fill="none" stroke="currentColor" stroke-width="2"
                                 stroke-linecap="round" stroke-linejoin="round">
@@ -33,12 +34,12 @@
                             </span>
                         </button>
                         <p class="mt-6 text-xs text-gray-600 text-center">
-                            Don't have an account? 
-                            <a  
+                            Don't have an account?
+                            <a
                             (click)="register()"
                             class="hover:underline cursor-pointer text-green-500">Sign up</a>
                         </p>
-                    </div>
+                    </form>
                 </div>
             </div>
         </div>
