--- a/src/app/Views/auth/login/login.component.html
+++ b/src/app/Views/auth/login/login.component.html
@@ -21,6 +21,7 @@
                             placeholder="Password" type="text" class="textInput">
                         </div>
                         <button
+                            (click)="login()"
                             class="mt-5 tracking-wide font-semibold text-white-500 w-full py-4 rounded-lg hover:bg-green-700 transition-all duration-300 ease-in-out flex items-center justify-center focus:shadow-outline focus:outline-none" style="background-color: #a3e583;">
                             <svg class="w-6 h-6 -ml-2" fill="none" stroke="currentColor" stroke-width="2"
                                 stroke-linecap="round" stroke-linejoin="round">
