--- a/src/app/Views/auth/register/register.component.css
+++ b/src/app/Views/auth/register/register.component.css
@@ -1,5 +1,5 @@
 .img{
-    background-image: url('../../../../resources/images/analitics.png');    
+    background-image: url('../../../../resources/images/analitics.png');
 }
 .logo{
     background-image: url('../../../../resources/images/icons/icoGlobal.png');
@@ -107,3 +107,16 @@
 .textInputWrapper:focus-within .textInput::placeholder {
   opacity: 0;
 }
+
+.alert {
+  color: #ef3042;
+  border-color: #f5c6cb;
+  border: 1px solid transparent;
+  border-radius: .25rem;
+}
+
+button:disabled {
+  background-color: gray !important;
+}
+
+
