--- a/src/app/Views/auth/register/register.component.html
+++ b/src/app/Views/auth/register/register.component.html
@@ -10,33 +10,80 @@
             </section>
             <div class="mt-5 flex flex-col items-center justify-center">
                 <div class="w-full flex-1 mt-8">
-                    <div class="mx-auto max-w-xs">
+                    <form class="mx-auto max-w-xs" [formGroup]="registerForm" (ngSubmit)="onSubmit()">
                         <div class="textInputWrapper">
                             <input
-                            [(ngModel)]="name"
                             name="name"
+                            formControlName="name"
                             placeholder="Your Name" type="text" class="textInput">
+
+                          <div class="alert"
+                               *ngIf="registerForm.controls['name'].invalid && (registerForm.controls['name'].dirty || registerForm.controls['name'].touched)">
+                            <div
+                              [@shake]="registerForm.controls['name'].errors?.['required']"
+                              *ngIf="registerForm.controls['name'].errors?.['required']">El nombre es requerido.
+                            </div>
+                            <div
+                              [@shake]="registerForm.controls['name'].errors?.['minlength']"
+                              *ngIf="registerForm.controls['name'].errors?.['minlength']">
+                              El nombre debe tener al menos 3 caracteres.
+                            </div>
+                          </div>
                         </div>
+
                         <div class="textInputWrapper">
                             <input
-                            [(ngModel)]="email"
                             name="email"
+                            formControlName="email"
                             placeholder="Your Email" type="text" class="textInput">
+                          <div class="alert"
+                               *ngIf="registerForm.controls['email'].invalid && (registerForm.controls['email'].dirty || registerForm.controls['email'].touched)">
+                            <div
+                              *ngIf="registerForm.controls['email'].errors?.['required']">El email es requerido.
+                            </div>
+                            <div
+                              *ngIf="registerForm.controls['email'].errors?.['email']">
+                              Formato de email incorrecto.
+                            </div>
+                          </div>
                         </div>
                         <div class="textInputWrapper">
                             <input
-                            [(ngModel)]="password"
                             name="password"
-                            placeholder="Your Password" type="text" class="textInput">
+                            formControlName="password"
+                            placeholder="Your Password" type="password" class="textInput">
+
+                          <div class="alert"
+                               *ngIf="registerForm.controls['password'].invalid && (registerForm.controls['password'].dirty || registerForm.controls['password'].touched)">
+                            <div
+                              *ngIf="registerForm.controls['password'].errors?.['required']">La contraseña es requerida.
+                            </div>
+                            <div
+                              *ngIf="registerForm.controls['password'].errors?.['minlength']">
+                              La contraseña debe tener al menos 6 caracteres.
+                            </div>
+                          </div>
                         </div>
+
                         <div class="textInputWrapper">
                             <input
-                            [(ngModel)]="confirmPassword"
                             name="confirmPassword"
-                            placeholder="Repeat your Password" type="text" class="textInput">
+                            formControlName="passwordConfirm"
+                            placeholder="Confirm your Password" type="password" class="textInput"
+                            >
+                          <div class="alert"
+                               *ngIf="registerForm.controls['passwordConfirm'].invalid && (registerForm.controls['passwordConfirm'].dirty || registerForm.controls['passwordConfirm'].touched)">
+                            <div
+                              *ngIf="registerForm.controls['passwordConfirm'].errors?.['required']">La confirmacion de contraseña es requerida.
+                            </div>
+                            <div
+                              *ngIf="registerForm.controls['passwordConfirm'].errors?.['minlength']">
+                              La confirmacion de contraseña debe tener al menos 6 caracteres.
+                            </div>
+                          </div>
                         </div>
-                        <button
-                            class="mt-5 tracking-wide font-semibold text-white-500 w-full py-4 rounded-lg hover:bg-green-700 transition-all duration-300 ease-in-out flex items-center justify-center focus:shadow-outline focus:outline-none" style="background-color: #a3e583;">
+                        <button [disabled]="!registerForm.valid || isSubmitting"
+                                class="mt-5 tracking-wide font-semibold text-white-500 w-full py-4 rounded-lg hover:bg-green-700 transition-all duration-300 ease-in-out flex items-center justify-center focus:shadow-outline focus:outline-none" style="background-color: #a3e583;">
                             <svg class="w-6 h-6 -ml-2" fill="none" stroke="currentColor" stroke-width="2"
                                 stroke-linecap="round" stroke-linejoin="round">
                                 <path d="M16 21v-2a4 4 0 00-4-4H5a4 4 0 00-4 4v2" />
@@ -54,7 +101,14 @@
                             class="hover:underline cursor-pointer text-green-500">
                             Login</a>
                         </p>
-                    </div>
+                      <br>
+
+                      <div class="alert" *ngIf="backendErrors">
+                        <div class="text-red-500" *ngFor="let error of backendErrors | keyvalue">
+                          {{ error.value }}
+                        </div>
+                      </div>
+                    </form>
                 </div>
             </div>
         </div>
