--- a/src/app/Views/auth/register/register.component.html
+++ b/src/app/Views/auth/register/register.component.html
@@ -1,4 +1,4 @@
-<!-- source:https://codepen.io/owaiswiz/pen/jOPvEPB -->
+<app-GlobalLoading *ngIf="isSubmitting" />
 <div class="  text-gray-900 flex justify-center" style="height: 100vh; background-color: #09070e;">
     <div class="max-w-screen-xl m-0 sm:m-10  shadow sm:rounded-lg flex justify-center flex-1" style="background-color: #19181d;">
         <div class="flex-1 text-center hidden lg:flex" style="background-color: #141317;">
