--- a/src/app/Components/Sections/aside-navbar/aside-navbar.component.html
+++ b/src/app/Components/Sections/aside-navbar/aside-navbar.component.html
@@ -1,4 +1,4 @@
-<section class="w-full h-full grid" style="background-color: #09070e;">
+<section class="w-full h-full grid"  style="background-color: #1a1c1e;">
     <section class="logo flex justify-center items-center">
         <div class="img"></div>
     </section>
