--- a/src/app/Layouts/dashboard/dashboard.component.html
+++ b/src/app/Layouts/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <main class="flex justify-center items-center">
-    <div class=" h-full w-full m-2 grid contenedor">
+    <div class=" h-full w-full grid contenedor">
         <aside>
             <app-aside-navbar/>
         </aside>
