--- a/src/app/Views/Control/control-view.component.html
+++ b/src/app/Views/Control/control-view.component.html
@@ -1,55 +1,25 @@
-<div class="h-full w-full flex flex-col md:flex-row p-4" style="background-color: #09070e;">
-  <div class="flex-grow flex flex-col justify-between mr-4 md:mr-0 md:mb-4">
-    <div class="modal-camara relative flex-grow mb-4 bg-gray-800 rounded-lg shadow-lg">
-      <p class="text-center text-white w-full" style="background-color: #19181d;">Video de la cámara</p>
-        <div class="modal-mapa flex-grow  rounded-lg shadow-lg">
-          <p class="text-center text-white">Mapa</p>
-        </div>
-    </div>
-  </div>
-  <!-- Panel lateral -->
-  <div style="background-color: #09070e;" class="w-full md:w-64 text-white rounded-lg shadow-lg p-4 md:ml-4 flex justify-between flex-col">
-    <!-- cuadros de monitoreo -->  
-        <app-card-graph-line 
-        [sensorIcon]="'bi bi-brightness-high'" 
-        [sensorName]="'Luminosidad'" 
-        [sensorValue]="50"
+<main class="menu grid h-full w-full">
+    <section class="top grid">
+        <article id="camera"></article>
+        <article id="map"></article>
+    </section>
+    <section class="bottom grid">
+        <article class="h-full w-full p-5 flex justify-between items-center gap-5">
+            <app-card-graph-line [sensorName]="'Temperatura'" [sensorIcon]="'bi bi-thermometer-half'" [sensorValue]="90"
+                [data]="data" [labels]="labels" [fill]="fill" [backgroundColor]="backColor" [borderColor]="borderColor"
+                [tension]="tension" [responsive]="responsive" />
 
-        [data]="data"
-        [fill]="fill"
-        [labels]="labels"
-        [backgroundColor]="'rgba(168, 140, 112, 0.4)'"
-        [borderColor]="borderColor"
-        [tension]="tension"
-        [responsive]="responsive"
-        />
+            <app-card-graph-line [sensorName]="'Velocidad'" [sensorIcon]="'bi bi-thermometer-half'" [sensorValue]="30"
+                [data]="data" [labels]="labels" [fill]="fill" [backgroundColor]="backColor" [borderColor]="borderColor"
+                [tension]="tension" [responsive]="responsive" />
 
-        <app-card-graph-line 
-        [sensorIcon]="'bi bi-brightness-high'" 
-        [sensorName]="'Luminosidad'" 
-        [sensorValue]="50"
+            <app-card-graph-line [sensorName]="'Angulo'" [sensorIcon]="'bi bi-thermometer-half'" [sensorValue]="90"
+                [data]="data" [labels]="labels" [fill]="fill" [backgroundColor]="backColor" [borderColor]="borderColor"
+                [tension]="tension" [responsive]="responsive" />
 
-        [data]="data"
-        [fill]="fill"
-        [labels]="labels"
-        [backgroundColor]="'rgba(168, 140, 112, 0.4)'"
-        [borderColor]="borderColor"
-        [tension]="tension"
-        [responsive]="responsive"
-        />
-        <app-card-graph-line 
-        [sensorIcon]="'bi bi-brightness-high'" 
-        [sensorName]="'Luminosidad'" 
-        [sensorValue]="50"
-
-        [data]="data"
-        [fill]="fill"
-        [labels]="labels"
-        [backgroundColor]="'rgba(168, 140, 112, 0.4)'"
-        [borderColor]="borderColor"
-        [tension]="tension"
-        [responsive]="responsive"
-        />
-
-  </div>
-</div>
+            <app-card-graph-line [sensorName]="'Temperature'" [sensorIcon]="'bi bi-thermometer-half'" [sensorValue]="10"
+                [data]="data" [labels]="labels" [fill]="fill" [backgroundColor]="backColor" [borderColor]="borderColor"
+                [tension]="tension" [responsive]="responsive" />
+        </article>
+    </section>
+</main>
