--- a/src/styles.css
+++ b/src/styles.css
@@ -5,7 +5,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&display=swap');
 
 body{
-    background-color: #141317;
+    background-color: #1f2125;
     color: #e2e8f0;
     font-family: "Comfortaa", sans-serif;
     font-optical-sizing: auto;
