--- a/src/app/Views/auth/login/login.component.html
+++ b/src/app/Views/auth/login/login.component.html
@@ -1,4 +1,4 @@
-<!-- source:https://codepen.io/owaiswiz/pen/jOPvEPB -->
+<app-GlobalLoading *ngIf="isSubmitting" />
 <div class="  text-gray-900 flex justify-center" style="height: 100vh; background-color: #09070e;">
     <div class="max-w-screen-xl m-0 sm:m-10  shadow sm:rounded-lg flex justify-center flex-1" style="background-color: #19181d;">
         <div class="lg:w-1/2 xl:w-5/12 p-6 sm:p-12">
@@ -13,14 +13,32 @@
                             name="email"
                             formControlName="email"
                             placeholder="Email" type="text" class="textInput">
+                          <div class="alert"
+                               *ngIf="loginForm.controls['email'].invalid && (loginForm.controls['email'].dirty || loginForm.controls['email'].touched)">
+                            <div
+                              *ngIf="loginForm.controls['email'].errors?.['required']">El email es requerido.
+                            </div>
+                            <div
+                              *ngIf="loginForm.controls['email'].errors?.['email']">
+                              Formato de email incorrecto.
+                            </div>
+                          </div>
                         </div>
+
                         <div class="textInputWrapper">
                             <input
                             name="password"
                             formControlName="password"
                             placeholder="Password" type="password" class="textInput">
+                          <div class="alert"
+                               *ngIf="loginForm.controls['password'].invalid && (loginForm.controls['password'].dirty || loginForm.controls['password'].touched)">
+                            <div
+                              *ngIf="loginForm.controls['password'].errors?.['required']">La contraseña es requerida.
+                            </div>
+                          </div>
                         </div>
-                        <button
+
+                        <button [disabled]="!loginForm.valid || isSubmitting"
                             type="submit"
                             class="mt-5 tracking-wide font-semibold text-white-500 w-full py-4 rounded-lg hover:bg-green-700 transition-all duration-300 ease-in-out flex items-center justify-center focus:shadow-outline focus:outline-none" style="background-color: #a3e583;">
                             <svg class="w-6 h-6 -ml-2" fill="none" stroke="currentColor" stroke-width="2"
