Pre diseño del formulario para registrar un dispositivo

--- a/src/app/Components/Sections/aside-navbar/aside-navbar.component.html
+++ b/src/app/Components/Sections/aside-navbar/aside-navbar.component.html
@@ -12,6 +12,9 @@
         <div class="cover">
             <i class="bi bi-stack"></i>
         </div>
+        <div class="cover">
+            <i class="bi bi-people-fill" routerLink="/dashboard/employee/store/device"></i>
+        </div>
     </section>
     <section class="profile flex justify-center items-center">
         <i class="bi bi-person-fill" routerLink="/dashboard/my/info"></i>
