--- a/src/app/Views/Devices/select-device/select-device.component.html
+++ b/src/app/Views/Devices/select-device/select-device.component.html
@@ -1,3 +1,9 @@
-<main>
-    select 
+<main class="flex justify-center items-center" style="width: 100%; height: 100vh;">
+    <article style="height: 100vh; width: 40%;"> 
+        <section class="title">
+            
+        </section>
+        <section class="body">
+        </section>
+    </article>
 </main>
