--- a/src/app/Components/Cards/device-row/device-row.component.html
+++ b/src/app/Components/Cards/device-row/device-row.component.html
@@ -1,1 +1,7 @@
-<p>device-row works!</p>
+<div role="alert" class="alert shadow-lg">
+  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="stroke-info shrink-0 w-6 h-6"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
+  <div>
+    <h3 class="font-bold">Number: {{reference}}</h3>
+  </div>
+  <button class="btn btn-sm">Select</button>
+</div>
