rediseño de select device

--- a/src/app/Components/Cards/device-row/device-row.component.html
+++ b/src/app/Components/Cards/device-row/device-row.component.html
@@ -1,7 +1,7 @@
-<div role="alert" class="alert shadow-lg">
-  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="stroke-info shrink-0 w-6 h-6"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
-  <div>
-    <h3 class="font-bold">Number: {{reference}}</h3>
-  </div>
-  <button class="btn btn-sm">Select</button>
-</div>
+<a class="block rounded-xl  p-4 shadow-sm focus:outline-none focus:ring cursor-pointer" style="background-color: #272b2e;">
+    <span class="inline-block rounded-lg p-3" style="background-color: #242527;">
+        <i class="bi bi-ev-front-fill"></i>
+    </span>
+    <h2 class="mt-2 font-bold">Device number:</h2>
+    <h2 class="mt-2 font-bold">{{reference}}</h2>
+</a>
