--- a/src/app/Components/Sections/aside-navbar/aside-navbar.component.html
+++ b/src/app/Components/Sections/aside-navbar/aside-navbar.component.html
@@ -19,4 +19,7 @@
     <section class="profile flex justify-center items-center">
         <i class="bi bi-person-fill" routerLink="/dashboard/my/info"></i>
     </section>
+    <section class="profile flex justify-center items-center">
+        <button class="bi bi-box-arrow-right" (click)="exit()"></button>
+    </section>
 </section>
