animacion login + interceptor corregido

--- a/src/app/Views/auth/login/login.component.html
+++ b/src/app/Views/auth/login/login.component.html
@@ -74,7 +74,20 @@
             </div>
         </div>
         <div class="flex-1 text-center hidden lg:flex" style="background-color: #141317;">
-            <div class="m-12 xl:m-16 w-full bg-contain bg-center bg-no-repeat img"></div>
+          <div class="flex justify-center items-center w-full h-screen bg-contain bg-center bg-no-repeat">
+              <div class="cube-container">
+                <div class="cube">
+                  <div class="face front">¡My Little Assistant!</div>
+                  <div class="face back">¡Welcome!</div>
+                  <div class="face right">¡Welcome!</div>
+                  <div class="face left">¡Welcome!</div>
+                  <div class="face top">¡My Little Assistant!</div>
+                  <div class="face bottom">¡Welcome!</div>
+                </div>
+              </div>
+              
+
+            </div>
         </div>
     </div>
 </div>
