Vistas  y metodos para registrar y ver la informacion de un dispositivo

--- a/src/app/Views/Device/store-device/store-device.component.css
+++ b/src/app/Views/Device/store-device/store-device.component.css
@@ -1,5 +1,5 @@
 .img{
-  background-image: url('../../../resources/images/OIP.jpeg');
+  background-image: url('../../../../resources/images/OIP.jpeg');
   mask-image: linear-gradient(
     to top,
     transparent 0%,
@@ -9,7 +9,7 @@
   );
 }
 .logo{
-  background-image: url('../../../resources/images/icons/icoGlobal.png');
+  background-image: url('../../../../resources/images/icons/icoGlobal.png');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
